--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Toss a Coin</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="shortcut icon" href="img/coin.jpeg">
 </head>
 <body>
     
