--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 
             <a href="">Accueil</a>
             <a href="rank.html">Classement</a>
-            <a href="">Votre compte</a>
-            
-            <label for="sondage-search">Cherchez votre sondage :</label>
+            <a href="test.html">Votre compte</a>
+            <a href="crea_sondage.html">Créez votre sondage !</a>
+            <label for="sondage-search">Cherchez un sondage :</label>
             <input type="search" id="site-search" name="q" aria-label="Search through site content">
             <button>Search</button>
 
@@ -57,6 +57,7 @@
                 <input type="checkbox">
                 <p>Reponse 1</p>
             </div>
+            <hr>
             <div class="sondage1">
                 <h2>Question</h2>
                 <input type="checkbox">
@@ -68,6 +69,7 @@
                 <input type="checkbox">
                 <p>Reponse 1</p>
             </div>
+            <hr>
             <div class="sondage1">
                 <h2>Question</h2>
                 <input type="checkbox">
@@ -79,6 +81,7 @@
                 <input type="checkbox">
                 <p>Reponse 1</p>
             </div>
+            <hr>
             <div class="sondage1">
                 <h2>Question</h2>
                 <input type="checkbox">
@@ -90,6 +93,7 @@
                 <input type="checkbox">
                 <p>Reponse 1</p>
             </div>
+            <hr>
             <div class="sondage1">
                 <h2>Question</h2>
                 <input type="checkbox">
@@ -101,6 +105,7 @@
                 <input type="checkbox">
                 <p>Reponse 1</p>
             </div>
+            <hr>
             <div class="sondage1">
                 <h2>Question</h2>
                 <input type="checkbox">
