--- a/rank.html
+++ b/rank.html
@@ -12,10 +12,10 @@
         
         <div class="navbar">
  
-             <a href="">Accueil</a>
+             <a href="index.html">Accueil</a>
              <a href="rank.html">Classement</a>
              <a href="">Votre compte</a>
-             
+             <a href="crea_sondage.html">Créez votre sondage !</a>
              <label for="sondage-search">Cherchez votre sondage :</label>
              <input type="search" id="site-search" name="q" aria-label="Search through site content">
              <button>Search</button>
@@ -34,15 +34,17 @@
             </div>
             <div class="col2">
                 <div class="sondage1">
-                    <h2>Question</h2>
-                    <input type="checkbox">
-                    <p>Reponse 1</p>
-                    <input type="checkbox">
-                    <p>Reponse 1</p>
-                    <input type="checkbox">
-                    <p>Reponse 1</p>
-                    <input type="checkbox">
-                    <p>Reponse 1</p>
+                    <dl>
+                        <dt>
+                          Classement 
+                        </dt>
+                        <dd class="percentage percentage-50"><span class="text">Lucas: 11.33%</span></dd>
+                        <dd class="percentage percentage-40"><span class="text">Lucas: 49.77%</span></dd>
+                        <dd class="percentage percentage-16"><span class="text">Théo: 16.09%</span></dd>
+                        <dd class="percentage percentage-5"><span class="text">Corentin: 5.41%</span></dd>
+                        <dd class="percentage percentage-2"><span class="text">PA: 1.62%</span></dd>
+                        <dd class="percentage percentage-2"><span class="text">Samy 4.4: 2%</span></dd>
+                      </dl>
                 </div>
             </div>
  
