--- a/crea_sondage.html
+++ b/crea_sondage.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Toss a Coin</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/crea.css">
     <link rel="shortcut icon" href="img/coin.jpeg">
 </head>
 <body>
@@ -34,7 +34,22 @@
 
            </div>
            <div class="col2">
-           
+                <fieldset>
+                    <form>
+                        <p>Création de votre sondage :</p>
+                        <div class="box">
+                            <div><input type="text" placeholder="Question de votre sondage...">
+                            </div>
+                            <div><input type="text" placeholder="Question de votre sondage...">
+                            </div>
+                            <div><input type="text" placeholder="2ème réponse possible">
+                            </div>
+                            <div><input type="submit">
+                            </div>
+                            
+                        </div>
+                    </form>
+                </fieldset>
            </div>
 
            <div class="col3">col 3</div>
