--- a/rank.html
+++ b/rank.html
@@ -38,11 +38,17 @@
                         <dt>
                           Classement 
                         </dt>
-                        <dd class="percentage percentage-50"><span class="text">Lucas: 11.33%</span></dd>
-                        <dd class="percentage percentage-40"><span class="text">Lucas: 49.77%</span></dd>
-                        <dd class="percentage percentage-16"><span class="text">Théo: 16.09%</span></dd>
-                        <dd class="percentage percentage-5"><span class="text">Corentin: 5.41%</span></dd>
-                        <dd class="percentage percentage-2"><span class="text">PA: 1.62%</span></dd>
+                        <dd class="percentage percentage-100"><span class="text">Lucas: 11.33%</span></dd>
+                        <dd class="percentage percentage-90"><span class="text">Lucas: 49.77%</span></dd>
+                        <dd class="percentage percentage-80"><span class="text">Théo: 16.09%</span></dd>
+                        <dd class="percentage percentage-70"><span class="text">Corentin: 5.41%</span></dd>
+                        <dd class="percentage percentage-60"><span class="text">PA: 1.62%</span></dd>
+                        <dd class="percentage percentage-50"><span class="text">Samy 4.4: 2%</span></dd>
+                        <dd class="percentage percentage-40"><span class="text">Lucas: 11.33%</span></dd>
+                        <dd class="percentage percentage-30"><span class="text">Lucas: 49.77%</span></dd>
+                        <dd class="percentage percentage-26"><span class="text">Théo: 16.09%</span></dd>
+                        <dd class="percentage percentage-25"><span class="text">Corentin: 5.41%</span></dd>
+                        <dd class="percentage percentage-12"><span class="text">PA: 1.62%</span></dd>
                         <dd class="percentage percentage-2"><span class="text">Samy 4.4: 2%</span></dd>
                       </dl>
                 </div>
