--- a/crea_sondage.html
+++ b/crea_sondage.html
@@ -13,7 +13,7 @@
         
        <div class="navbar">
 
-            <a href="">Accueil</a>
+            <a href="index.html">Accueil</a>
             <a href="rank.html">Classement</a>
             <a href="test.html">Votre compte</a>
             <a href="crea_sondage.html">Créez votre sondage !</a>
@@ -40,7 +40,7 @@
                         <div class="box">
                             <div><input type="text" placeholder="Question de votre sondage...">
                             </div>
-                            <div><input type="text" placeholder="Question de votre sondage...">
+                            <div><input type="text" placeholder="1ère réponse possible">
                             </div>
                             <div><input type="text" placeholder="2ème réponse possible">
                             </div>
