--- a/index.html
+++ b/index.html
@@ -119,7 +119,32 @@
             </div>
            </div>
 
-           <div class="col3">col 3</div>
+           <div class="col3">
+            <div>
+                <h2>Sondage stars</h2>
+                <hr>
+                <a class="tt" href="#"><p>Question 1</p></a>
+                <hr>
+                <a class="tt" href="#"><p>Question 2</p></a>
+                <hr>
+                <a class="tt" href="#"><p>Question 3</p></a>
+                <hr>
+                <a class="tt" href="#"><p>Question 4</p></a>
+                <hr>
+                <style>
+                    .tt {
+    display: block;
+    color: black;
+    
+    text-decoration: none;
+                        
+                    }
+                    .tt:hover {
+                        background-color: #a5d8ff;
+                    }
+                </style>
+            </div>
+           </div>
        </div>
    </div>
 
