--- a/crea_sondage.html
+++ b/crea_sondage.html
@@ -52,7 +52,20 @@
                 </fieldset>
            </div>
 
-           <div class="col3">col 3</div>
+           <div class="col3">
+            <div>
+                <h2 class="titlecol3">Sondage stars</h2>
+                <hr>
+                <a class="tt" href="#"><p>Question 1</p></a>
+                <hr>
+                <a class="tt" href="#"><p>Question 2</p></a>
+                <hr>
+                <a class="tt" href="#"><p>Question 3</p></a>
+                <hr>
+                <a class="tt" href="#"><p>Question 4</p></a>
+                <hr>
+            </div>
+           </div>
        </div>
    </div>
 
