--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
             <a href="">Accueil</a>
             <a href="rank.html">Classement</a>
-            <a href="test.html">Votre compte</a>
+            <a href="#">Votre compte</a>
             <a href="crea_sondage.html">Créez votre sondage !</a>
             <label for="sondage-search">Cherchez un sondage :</label>
             <input type="search" id="site-search" name="q" aria-label="Search through site content">
@@ -121,7 +121,7 @@
 
            <div class="col3">
             <div>
-                <h2>Sondage stars</h2>
+                <h2 class="titlecol3">Sondage stars</h2>
                 <hr>
                 <a class="tt" href="#"><p>Question 1</p></a>
                 <hr>
@@ -131,18 +131,6 @@
                 <hr>
                 <a class="tt" href="#"><p>Question 4</p></a>
                 <hr>
-                <style>
-                    .tt {
-    display: block;
-    color: black;
-    
-    text-decoration: none;
-                        
-                    }
-                    .tt:hover {
-                        background-color: #a5d8ff;
-                    }
-                </style>
             </div>
            </div>
        </div>
