--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <a href="rank.html">Classement</a>
             <a href="#">Votre compte</a>
             <a href="crea_sondage.html">Créez votre sondage !</a>
+            <a href="quizz.html">Quizz js</a>
             <label for="sondage-search">Cherchez un sondage :</label>
             <input type="search" id="site-search" name="q" aria-label="Search through site content">
             <button>Search</button>
