--- a/quizz.html
+++ b/quizz.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/quizz.css">
-    <title>Document</title>
+    <link rel="shortcut icon" href="img/coin.jpeg">
+    <title>Quizz js</title>
 </head>
 <body>
    
@@ -39,7 +40,7 @@
                 
                  <img src="img/pp.jpg">
  
-                 <p>Nom d'utilisateur : <p id="Ecran"></p> </p>
+                 <p id="userName"></p> 
                  <p>Nombre de participations à un sondage : </p>
                  <p>Rank : </p>
  
